Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
 <td><a href="https://coveralls.io/r/mfpiccolo/minitest-vcr?branch=coveralls"><img src="https://coveralls.io/repos/mfpiccolo/minitest-vcr/badge.png?branch=coveralls" alt="Coverage Status"></a></td>
 </tr>
 <tr>
+<td>Grade</td>
+<td><a href="https://codeclimate.com/github/mfpiccolo/minitest-vcr"><img src="https://codeclimate.com/github/mfpiccolo/minitest-vcr.png" alt="Code Climate"></a></td>
+</tr>
+<tr>
 <td>Homepage</td>
 <td><a href="http://mfpiccolo.github.io/minitest-vcr">http://mfpiccolo.github.io/minitest-vcr</a></td>
 </tr>
